--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   curved_navigation_bar: ^0.3.4
+  flutter_web_auth: ^0.4.0
 
 dev_dependencies:
   flutter_test:
