--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,20 @@ dependencies:
   flutter_icons: ^1.1.0
   kakao_flutter_sdk: ^0.9.0
   flutter_staggered_grid_view: 0.3.0
+  http: 0.13.2
+
+  package_info_plus: ^1.0.4
+  package_info_plus_web: ^1.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^0.1.2
   curved_navigation_bar: ^0.3.4
   flutter_web_auth: ^0.4.0
+  path_provider:
+  uuid: ^3.0.4
+
 
 dev_dependencies:
   flutter_test:
