--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   flutter_icons: ^1.1.0
   kakao_flutter_sdk: ^0.9.0
   flutter_staggered_grid_view: 0.3.0
-  http: 0.13.2
+  cupertino_icons: ^1.0.2
+  axios: ^1.0.1+1
+  http: ^0.13.4
 
   package_info_plus: ^1.0.4
   package_info_plus_web: ^1.0.4
@@ -36,7 +38,6 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
   curved_navigation_bar: ^0.3.4
   flutter_web_auth: ^0.4.0
   path_provider:
