--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_web_auth: ^0.4.0
   path_provider:
   uuid: ^3.0.4
+  animated_theme_switcher: "^2.0.1"
+  toast: ^0.1.3
 
 
 dev_dependencies:
